# adk-playground

./: .gitignore  pyproject.toml
coder_service/: .env.example  Dockerfile  agent.py  requirements.txt
diagnose_agent/: agent.py
diagnose_agent/callbacks/: __init__.py  budget.py  redaction.py
diagnose_agent/sub_agents/: __init__.py  correlation.py  deep_dive.py  discovery.py
diagnose_agent/tools/: __init__.py  conclude_diagnosis.py  describe_resource.py  get_logs.py  get_resources.py  query_history.py
multi_tool_agent/: agent.py  requirements.txt
multi_tool_agent/.adk/: session.db
multi_tool_agent/sub_agents/: __init__.py  farewell.py  greeting.py
multi_tool_agent/tools/: __init__.py  farewell.py  greeting.py  weather.py
sdlc_agent/: .agent_engine_config.json  .env.example  agent.py  requirements.txt
sdlc_agent/agents/: __init__.py  planner.py  research.py
sdlc_agent/callbacks/: __init__.py  rate_limit.py
sdlc_agent/sub_agents/: __init__.py  coder.py  planner.py
sdlc_agent/tools/: __init__.py  coder_client.py  github.py  github_reviews.py  jira.py  planner.py
